# scraping-the-world

./: .env  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  dockerfile  env.py  pyproject.toml  requirements.txt  scraping-the-world.postman_collection.json
envs/: .env.dev  .env.homolog  .env.prod
scraping_the_world/: app.py  sites.py
scraping_the_world/exceptions/: scrapers_exceptions.py
scraping_the_world/models/: database_schema.py  db_populate.py  logs.py  querys.py  utils.py
scraping_the_world/routes/: consult.py  index.py
scraping_the_world/scrapers/: americanas.py  magazineluiza.py  pontofrio.py  saraiva.py  submarino.py  zattini.py
scraping_the_world/scrapers/webdriver_manager/: webdriver_manager.py  webdriver_toolkit.py
tests/: test_api.py  test_route_consult.py  test_site_americanas.py  test_site_magazineluiza.py  test_site_pontofrio.py  test_site_saraiva.py  test_site_submarino.py  test_site_zattini.py
tests/helpers/: helper.py
