[tool.poetry]
name = "scraping-the-world"
version = "0.1.0"
description = ""
authors = ["Jorge Vasconcelos <jorge.r.p.v@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask-RESTful = "^0.3.9"
Flask = "^2.1.0"
selenium = "^4.1.3"
PyMySQL = "^1.0.2"
rich = "^12.0.1"
python-dotenv = "^0.20.0"
requests-html = "^0.10.0"
parsel = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
